--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,14 @@ spring.mvc.view.suffix=.jsp
 
 spring.mvc.static-path-pattern=/resources/**
 
+# 오라클 DB 설정
+spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+spring.datasource.username=scott
+spring.datasource.password=tiger
 
+# mybatis 설정
+mybatis.mapper-locations=mybatis-mapper/**/*.xml
+
+mybatis.configuration.map-underscore-to-camel-case=true
+logging.level.com.gyojincompany.profileweb.dao=trace
