--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,11 +7,17 @@ spring.mvc.view.suffix=.jsp
 
 spring.mvc.static-path-pattern=/resources/**
 
-# 오라클 DB 설정
+# 오라클 로컬 DB 설정
+#spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+#spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+#spring.datasource.username=scott
+#spring.datasource.password=tiger
+
+# 오라클 클라우드 DB 설정
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
-spring.datasource.username=scott
-spring.datasource.password=tiger
+spring.datasource.url=jdbc:oracle:thin:@myProfileWebDb_high?TNS_ADMIN=D:/LKJ/oracle_cloud/Wallet_myProfileWebDb
+spring.datasource.username=admin
+spring.datasource.password=Lee123456789
 
 # mybatis 설정
 mybatis.mapper-locations=mybatis-mapper/**/*.xml
