오라클 클라우드 배포용 수정 버전

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # 서버 port 설정
-server.port=8888
+server.port=8080
 
 # springboot jsp 설정
 spring.mvc.view.prefix=/WEB-INF/views/
@@ -15,7 +15,8 @@ spring.mvc.static-path-pattern=/resources/**
 
 # 오라클 클라우드 DB 설정
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@myProfileWebDb_high?TNS_ADMIN=D:/LKJ/oracle_cloud/Wallet_myProfileWebDb
+#spring.datasource.url=jdbc:oracle:thin:@myProfileWebDb_high?TNS_ADMIN=D:/LKJ/oracle_cloud/Wallet_myProfileWebDb
+spring.datasource.url=jdbc:oracle:thin:@myProfileWebDb_high?TNS_ADMIN=/var/lib/tomcat9/Wallet_myProfileWebDb
 spring.datasource.username=admin
 spring.datasource.password=Lee123456789
 
